<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/sign_in_button"
        android:onClick="loginToRest"
        android:text="@string/bLogin"
        android:textColor="#55acee"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/bLogin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/ivLogo"
        android:src="@mipmap/ic_twitter_bird" />

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivLogo"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/tvWelcomeMessage"
        android:textSize="20sp"
        android:textColor="@color/black">
    </TextView>

</RelativeLayout>


