<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

      <!--  <Button
            android:id="@+id/bTweetStatusDetail"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/retweet"
            android:textColor="#777777"
            android:textSize="12sp"
            style="@style/Button"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivDetailProfileImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/ivProfile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvDetailname"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/text_size_13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvScreenName"
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_13sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBody"
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:textSize="@dimen/text_size_13sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivDetailPostImage"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_below="@+id/tvBody"
            android:layout_alignLeft="@+id/tvBody"
            android:layout_alignStart="@+id/tvBody"
            android:layout_alignRight="@+id/tvTimeofPost"
            android:layout_alignEnd="@id/tvTimeofPost"
            android:layout_marginBottom="@dimen/margin_10dp"/>

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textSize="10sp"
            />

        <View
            android:id="@+id/vTopSeparator"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRetweetsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_size_13sp"
                android:text="0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginRight="2dp"/>

            <TextView
                android:id="@+id/tvRetweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:text="@string/tvRetweets"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_13sp" />

            <TextView
                android:id="@+id/tvFavouritesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/text_size_13sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="0"/>

            <TextView
                android:id="@+id/tvFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/tvFavourites"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_13sp" />
        </LinearLayout>

        <View
            android:id="@+id/vBottomSeparator"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:stretchColumns="*" android:background="@android:color/transparent">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:background="@android:color/transparent">
                <TextView
                    android:id="@+id/ibDetailReply"
                    android:layout_width="@dimen/margin_30dp"
                    android:layout_height="@dimen/margin_30dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/gray"  android:layout_weight="1"
                    android:drawableLeft="@drawable/reply"/>

                <TextView
                    android:id="@+id/tvDetailRetweetCount"
                    android:layout_width="@dimen/margin_30dp"
                    android:layout_height="@dimen/margin_30dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/gray"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/retweet"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:drawablePadding="1dp"
                    android:textSize="@dimen/text_size_13sp"/>
                <TextView
                    android:id="@+id/tvDetailFavoriteCount"
                    android:layout_width="@dimen/margin_30dp"
                    android:layout_height="@dimen/margin_30dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/gray"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/favorite"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:drawablePadding="1dp"
                    android:textSize="@dimen/text_size_13sp"/>
                <TextView
                    android:id="@+id/ibDetailShare"
                    android:layout_width="@dimen/margin_25dp"
                    android:layout_height="@dimen/margin_25dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="1" android:drawableLeft="@mipmap/ic_share"/>
            </TableRow>
        </TableLayout>
        <WebView
            android:id="@+id/wvMedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</ScrollView>


